# ButtonMatrix

./: .gitignore  .gitmodules  CMakeLists.txt
Documentation/: ButtonMatrix.tex
schematics/: 201902_GameBoard.fzz  201902_GameBoard_correctParts.fzz  201902_GameBoard_fudged.fzz  201902_GameBoard_fudged_Backup_Output.fzz  201902_GameBoard_fudged_Backup_input.fzz  201902_GameBoard_fudged_final1.fzz  201902_GameBoard_fudged_final1_grounded.fzz  201902_GameBoard_fudged_final1_grounded_named.fzz  202402_GameBoard_Rev2.fzz  202402_GameBoard_Rev2_fudged.fzz
src/: CMakeLists.txt  main.cpp
visualization/: c2py.py  py2c.py  solver.py
